# test programs to run
TESTS = \
	test_conf.sh

HOSTS_CONF = \
	core_global.conf \
	core_gw.conf \
	core_sat.conf \
	core_st.conf \
	topology.conf

HOSTS_XSD = \
	xsd/core_global.xsd \
	xsd/core_gw.xsd \
	xsd/core_sat.xsd \
	xsd/core_st.xsd \
	xsd/topology.xsd

EXTRA_DIST = \
	test_conf.sh \
	check_xml.py \
	$(HOSTS_CONF) \
	$(HOSTS_XSD)


