# test programs to run
TESTS = \
	test_conf.sh

HOSTS_CONF = \
	core_global.conf \
	core_gw.conf \
	core_sat.conf \
	core_st.conf \
	topology.conf

HOSTS_XSD = \
	xsd/core_global.xsd \
	xsd/core_gw.xsd \
	xsd/core_sat.xsd \
	xsd/core_st.xsd \
	xsd/topology.xsd \
	xsd/common.xsd
	
MODCOD_DRA = \
	modcod_dra/collective/sim_dra_scheme.txt \
	modcod_dra/collective/sim_modcods.txt \
	modcod_dra/collective/def_dra_scheme.txt \
	modcod_dra/collective/def_modcods.txt \
	modcod_dra/individual/sim_dra_scheme.txt \
	modcod_dra/individual/sim_modcods.txt \
	modcod_dra/individual/def_dra_scheme.txt \
	modcod_dra/individual/def_modcods.txt \
	modcod_dra/clear_sky/cst_dra_scheme.txt \
	modcod_dra/clear_sky/cst_modcods.txt \
	modcod_dra/clear_sky/def_dra_scheme.txt \
	modcod_dra/clear_sky/def_modcods.txt
	
MANDATORY_PLUGINS = \
	mandatory_plugins/

EXTRA_DIST = \
	test_conf.sh \
	check_xml.py \
	$(HOSTS_CONF) \
	$(HOSTS_XSD) \
	$(MODCOD_DRA) \
	$(MANDATORY_PLUGINS) \
	simulation_files.ini \
	deploy.ini \
	dama.input

