# test programs to run
TESTS = \
	test_conf.sh

HOSTS_CONF = \
	core_global.conf \
	core_gw.conf \
	core_sat.conf \
	core_st.conf \
	topology.conf

HOSTS_XSD = \
	xsd/core_global.xsd \
	xsd/core_gw.xsd \
	xsd/core_sat.xsd \
	xsd/core_st.xsd \
	xsd/topology.xsd \
	xsd/common.xsd
	
MODCOD = \
	modcod/rcs/ \
	modcod/s2/
	
MANDATORY_PLUGINS = \
	mandatory_plugins/

EXTRA_DIST = \
	test_conf.sh \
	check_xml.py \
	$(HOSTS_CONF) \
	$(HOSTS_XSD) \
	$(MODCOD) \
	$(MANDATORY_PLUGINS) \
	deploy.ini \
	dama.input

