lib_LTLIBRARIES = libopensand_margouilla.la

libopensand_margouilla_la_cpp = \
mgl_filename.cpp \
mgl_list.cpp \
mgl_fifo.cpp \
mgl_bloc.cpp \
mgl_eventmgr.cpp \
mgl_debug.cpp \
mgl_config_file.cpp \
mgl_blocmgr.cpp \
mgl_type.cpp \
mgl_thread.cpp \
mgl_time.cpp \
mgl_socket.cpp \
mgl_string.cpp \
mgl_msg.cpp \
mgl_msgset.cpp \
mgl_marshall.cpp \
mgl_memorypool.cpp \
mgl_ip_address.cpp \
lib_ip_udp_cx.cpp \
lib_mac.cpp \
msg_ip.cpp


libopensand_margouilla_la_h = \
mgl_time.h \
mgl_type.h \
mgl_obj.h \
mgl_string.h \
mgl_thread.h \
mgl_remote_cmd.h \
mgl_socket.h \
mgl_msgset.h \
mgl_msg.h \
mgl_memorypool.h \
mgl_list.h \
mgl_font.h \
mgl_marshall.h \
mgl_link.h \
mgl_fifo.h \
mgl_bloc.h \
mgl_filename.h \
mgl_event.h \
mgl_eventmgr.h \
mgl_config_file.h \
mgl_debug.h \
mgl_blocmgr.h \
mgl_channel.h \
mgl_ip_address.h \
lib_ip_udp_cx.h \
lib_mac.h \
msg_ip.h

libopensand_margouilla_la_SOURCES = $(libopensand_margouilla_la_cpp) $(libopensand_margouilla_la_h)

libopensand_margouilla_la_LIBADD = -lrt

libopensand_margouilla_includedir = ${includedir}/opensand_margouilla

libopensand_margouilla_include_HEADERS = \
mgl_time.h \
mgl_type.h \
mgl_obj.h \
mgl_string.h \
mgl_thread.h \
mgl_remote_cmd.h \
mgl_socket.h \
mgl_msgset.h \
mgl_msg.h \
mgl_memorypool.h \
mgl_list.h \
mgl_font.h \
mgl_marshall.h \
mgl_link.h \
mgl_fifo.h \
mgl_bloc.h \
mgl_filename.h \
mgl_event.h \
mgl_eventmgr.h \
mgl_config_file.h \
mgl_debug.h \
mgl_blocmgr.h \
mgl_channel.h \
mgl_ip_address.h \
lib_ip_udp_cx.h \
lib_mac.h \
msg_ip.h

EXTRA_DIST=readme.txt

