EXTRA_DIST = $(TESTS)

lib_LTLIBRARIES = libopensand_output_openbach.la

libopensand_output_openbach_la_cpp = \
	OutputOpenbach.cpp
libopensand_output_openbach_la_h = \
	OutputOpenbach.h
libopensand_output_openbach_la_SOURCES = \
	$(libopensand_output_openbach_la_cpp) \
	$(libopensand_output_openbach_la_h)

libopensand_output_openbach_la_CPPFLAGS = ${AM_CPPFLAGS}

libopensand_output_openbach_la_LDFLAGS = ${AM_LDFLAGS}

libopensand_output_openbach_includedir = ${includedir}/opensand_output_openbach

libopensand_output_openbach_include_HEADERS = \
	OutputOpenbach.h
	
